src/objects/Apttus_Approval__Term_Exception_Approval_Condition__c.object
<CustomObject>
    <description>Required conditions for a given Term Exception Approval</description>
    <fields>
        <fullName>Apttus_Approval__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Select this checkbox to include the condition in the conditions that get tested.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter an optional description for the condition.</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Field__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the API field name for the field the condition applies to.  For custom field names, the  API name has a  &quot;__c&quot; appended to it.</inlineHelpText>
        <label>Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Join__c</fullName>
        <inlineHelpText>Enter the operator to join conditions with each other.</inlineHelpText>
        <label>Join</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AND</fullName>
                    <default>true</default>
                    <label>AND</label>
                </value>
                <value>
                    <fullName>OR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Number__c</fullName>
        <inlineHelpText>Enter the number of the condition, startting with 1 and incrementing up to the number of conditions.  Conditions are evaluated in the order specified by this field.  When a condition evaluates to false, remaining conditions are ignored.</inlineHelpText>
        <label>Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Object_Qualifier__c</fullName>
        <inlineHelpText>Qualify the object that this condition applies to.  For example, an object qualifier of &quot;Agreement Owner&quot; means get the value of the &quot;Area__c&quot; field from the &quot;User&quot; specified by the agreement owner in the agreement related to the term exception approval.</inlineHelpText>
        <label>Object Qualifier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Agreement Opportunity Owner</fullName>
                </value>
                <value>
                    <fullName>Agreement Owner</fullName>
                </value>
                <value>
                    <fullName>Agreement Requestor</fullName>
                </value>
                <value>
                    <fullName>Current User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Object__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the API object name for the object the condition applies to.  For custom objects, the  API name has a  &quot;__c&quot; appended to it.</inlineHelpText>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Operator__c</fullName>
        <inlineHelpText>Enter the operator for comparing the condition value with the value of the condition field name specified.</inlineHelpText>
        <label>Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>equal to</fullName>
                </value>
                <value>
                    <fullName>not equal to</fullName>
                </value>
                <value>
                    <fullName>starts with</fullName>
                </value>
                <value>
                    <fullName>contains</fullName>
                </value>
                <value>
                    <fullName>does not contain</fullName>
                </value>
                <value>
                    <fullName>less than</fullName>
                </value>
                <value>
                    <fullName>greater than</fullName>
                </value>
                <value>
                    <fullName>less than or equal to</fullName>
                </value>
                <value>
                    <fullName>greater than or equal to</fullName>
                </value>
                <value>
                    <fullName>in</fullName>
                </value>
                <value>
                    <fullName>not in</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Approval__TermExceptionApprovalId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The term exception approval associated with the condition</description>
        <label>Term Exception Approval</label>
        <referenceTo>Apttus_Approval__Term_Exception_Approval__c</referenceTo>
        <relationshipLabel>Term Exception Approval Conditions</relationshipLabel>
        <relationshipName>TermExceptionApprovalConditions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Term_Exception_Approval__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This field denotes the Term Exception Approval record that this condition applies to.</inlineHelpText>
        <label>Term Exception Approval (Deprecated)</label>
        <referenceTo>Apttus_Approval__Term_Exception_Approval__c</referenceTo>
        <relationshipLabel>Term Exception Approval Conditions (Deprecated)</relationshipLabel>
        <relationshipName>R00N70000002CqgvEAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Value__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter value(s) to be compared with the field name value.  Enter multiple values to be OR&apos;ed together seperated by commas.  For example, a value of &apos;val1,val2&quot; in the value field tests the condition if (fieldvalue=val1 OR fieldvalue=val2).</inlineHelpText>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Term Exception Approval Condition</label>
    <nameField>
        <displayFormat>TEAC-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Term Exception Approval Conditions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>